Async processing. data can be processed while listening for data to become ready. This has brought latency into the <1ms range, but otherwise it does not seem to improve performance.

--- a/Udpc.Share/Udpc.Share.Cli/Udpc.Share.Cli.csproj
+++ b/Udpc.Share/Udpc.Share.Cli/Udpc.Share.Cli.csproj
@@ -6,4 +6,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Udpc.Share\Udpc.Share.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\libudpc.so">
+      <Link>libudpc.so</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
