Work on a datalog stream based file format instead of git. This should make it possible to more efficiently stream changes between peers.

--- a/Udpc.Share/Udpc.Share/Udpc.Share.csproj
+++ b/Udpc.Share/Udpc.Share/Udpc.Share.csproj
@@ -3,6 +3,12 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Threading.Tasks" Version="4.3.0" />
   </ItemGroup>
