Use of blake2 algorithm. Support for detecting if a merge should happen. (no merge yet).

--- a/Udpc.Share/Udpc.Share/Udpc.Share.csproj
+++ b/Udpc.Share/Udpc.Share/Udpc.Share.csproj
@@ -5,11 +5,18 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Threading.Tasks" Version="4.3.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Blake2Sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>references\Blake2Sharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
