--- a/Udpc.Share/Udpc.Share/Udpc.Share.csproj
+++ b/Udpc.Share/Udpc.Share/Udpc.Share.csproj
@@ -19,4 +19,7 @@
       <HintPath>references\Blake2Sharp.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Datalog" />
+  </ItemGroup>
 </Project>
