--- a/makefile.orbital
+++ b/makefile.orbital
@@ -5,7 +5,7 @@ CC = gcc
 TARGET = liborbital.so
 LIB_OBJECTS =$(LIB_SOURCES:.c=.o)
 LDFLAGS= -L. $(OPT) -Wextra #-lmcheck #-ftlo #setrlimit on linux 
-LIBS= -ldl -lm -ludpc -liron
+LIBS= -ldl -lm -ludpc -liron -lbloom
 ALL= $(TARGET)
 CFLAGS = -Iinclude -Isrc -std=c11 -c $(OPT) -D_GNU_SOURCE -Wall -Wextra -Werror=implicit-function-declaration -Wformat=0  -fdiagnostics-color -Wextra -Werror -Wwrite-strings -fbounds-check -Wparentheses  #-DDEBUG
 
