--- a/makefile.orbital
+++ b/makefile.orbital
@@ -4,10 +4,10 @@ LIB_SOURCES = $(addprefix orbital/, $(LIB_SOURCES1))
 CC = gcc
 TARGET = liborbital.so
 LIB_OBJECTS =$(LIB_SOURCES:.c=.o)
-LDFLAGS= -L. $(OPT) -Wextra #-lmcheck #-ftlo #setrlimit on linux 
-LIBS= -ldl -lm -ludpc -liron -lbloom -licydb
+LDFLAGS= -L. -L/usr/local/lib $(OPT) -Wextra #-lmcheck #-ftlo #setrlimit on linux 
+LIBS= -ldl -lm -ludpc -liron -lbloom -licydb -lxxhash
 ALL= $(TARGET)
-CFLAGS = -Iinclude -Isrc -std=c11 -c $(OPT) -D_GNU_SOURCE -Wall -Wextra -Werror=implicit-function-declaration -Wformat=0  -fdiagnostics-color -Wextra -Werror -Wwrite-strings -fbounds-check -Wparentheses  #-DDEBUG
+CFLAGS = -Iinclude -I/usr/local/include -Isrc -std=c11 -c $(OPT) -D_GNU_SOURCE -Wall -Wextra -Werror=implicit-function-declaration -Wformat=0  -fdiagnostics-color -Wextra -Werror -Wwrite-strings -fbounds-check -Wparentheses  #-DDEBUG
 
 $(TARGET): $(LIB_OBJECTS)
 	$(CC) $(LDFLAGS) $(LIB_OBJECTS) $(LIBS) --shared -o $@
