Fixed bug with xxhash that needs to be initialized. Fixed bug in testing code that caused it to fail.

--- a/makefile.orbital
+++ b/makefile.orbital
@@ -5,12 +5,12 @@ CC = gcc
 TARGET = liborbital.so
 LIB_OBJECTS =$(LIB_SOURCES:.c=.o)
 LDFLAGS= -L. -L/usr/local/lib $(OPT) -Wextra #-lmcheck #-ftlo #setrlimit on linux 
-LIBS= -ldl -lm -ludpc -liron -lbloom -licydb -lxxhash
+LIBS= -ldl -lm -ludpc -liron -licydb -lxxhash
 ALL= $(TARGET)
 CFLAGS = -Iinclude -I/usr/local/include -Isrc -std=c11 -c $(OPT) -D_GNU_SOURCE -Wall -Wextra -Werror=implicit-function-declaration -Wformat=0  -fdiagnostics-color -Wextra -Werror -Wwrite-strings -fbounds-check -Wparentheses  #-DDEBUG
 
 $(TARGET): $(LIB_OBJECTS)
-	$(CC) $(LDFLAGS) $(LIB_OBJECTS) $(LIBS) --shared -o $@
+	$(CC) $(LDFLAGS) $(LIB_OBJECTS) $(LIBS) --shared -o $@ libbloom.a libxxhash.a
 
 all: $(ALL)
 
